syntax = "proto3";



// Definition of the message Product
message Product {
  string id = 1;
  string name = 2;
  float price = 3;
  string description = 4;
}

// Definition of the ProductService service
service ProductService {
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

// Definition of the GetProductsRequest message
message GetProductsRequest {
  // Define any request parameters here
}

// Definition of the GetProductsResponse message
message GetProductsResponse {
  repeated Product products = 1;
}

// Definition of the GetProductRequest message
message GetProductRequest {
  string id = 1;
}

// Definition of the GetProductResponse message
message GetProductResponse {
  Product product = 1;
}

// Definition of the CreateProductRequest message
message CreateProductRequest {
  string name = 1;
  float price = 2;
  string description = 3;
}

// Definition of the CreateProductResponse message
message CreateProductResponse {
  Product product = 1;
}
